nodejs/versioned_docs/version-1.23/api/class-testoptions.mdx
---
id: class-testoptions
title: "TestOptions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright Test provides many options to configure test environment, [Browser], [BrowserContext] and more.

These options are usually provided in the [configuration file](../test-configuration.mdx) through [testConfig.use](./api/class-testconfig.mdx#test-config-use) and [testProject.use](./api/class-testproject.mdx#test-project-use).

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
import type { PlaywrightTestConfig } from '@playwright/test';
const config: PlaywrightTestConfig = {
  use: {
    headless: false,
    viewport: { width: 1280, height: 720 },
    ignoreHTTPSErrors: true,
    video: 'on-first-retry',
  },
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  use: {
    headless: false,
    viewport: { width: 1280, height: 720 },
    ignoreHTTPSErrors: true,
    video: 'on-first-retry',
  },
};

module.exports = config;
```

</TabItem>
</Tabs>

Alternatively, with [test.use(options)](./api/class-test.mdx#test-use) you can override some options for a file.

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
// example.spec.ts
import { test, expect } from '@playwright/test';

// Run tests in this file with portrait-like viewport.
test.use({ viewport: { width: 600, height: 900 } });

test('my portrait test', async ({ page }) => {
  // ...
});
```

</TabItem>
<TabItem value="js">

```js
// example.spec.js
const { test, expect } = require('@playwright/test');

// Run tests in this file with portrait-like viewport.
test.use({ viewport: { width: 600, height: 900 } });

test('my portrait test', async ({ page }) => {
  // ...
});
```

</TabItem>
</Tabs>


- [testOptions.acceptDownloads](./api/class-testoptions.mdx#test-options-accept-downloads)
- [testOptions.actionTimeout](./api/class-testoptions.mdx#test-options-action-timeout)
- [testOptions.baseURL](./api/class-testoptions.mdx#test-options-base-url)
- [testOptions.browserName](./api/class-testoptions.mdx#test-options-browser-name)
- [testOptions.bypassCSP](./api/class-testoptions.mdx#test-options-bypass-csp)
- [testOptions.channel](./api/class-testoptions.mdx#test-options-channel)
- [testOptions.colorScheme](./api/class-testoptions.mdx#test-options-color-scheme)
- [testOptions.connectOptions](./api/class-testoptions.mdx#test-options-connect-options)
- [testOptions.contextOptions](./api/class-testoptions.mdx#test-options-context-options)
- [testOptions.deviceScaleFactor](./api/class-testoptions.mdx#test-options-device-scale-factor)
- [testOptions.extraHTTPHeaders](./api/class-testoptions.mdx#test-options-extra-http-headers)
- [testOptions.geolocation](./api/class-testoptions.mdx#test-options-geolocation)
- [testOptions.hasTouch](./api/class-testoptions.mdx#test-options-has-touch)
- [testOptions.headless](./api/class-testoptions.mdx#test-options-headless)
- [testOptions.httpCredentials](./api/class-testoptions.mdx#test-options-http-credentials)
- [testOptions.ignoreHTTPSErrors](./api/class-testoptions.mdx#test-options-ignore-https-errors)
- [testOptions.isMobile](./api/class-testoptions.mdx#test-options-is-mobile)
- [testOptions.javaScriptEnabled](./api/class-testoptions.mdx#test-options-java-script-enabled)
- [testOptions.launchOptions](./api/class-testoptions.mdx#test-options-launch-options)
- [testOptions.locale](./api/class-testoptions.mdx#test-options-locale)
- [testOptions.navigationTimeout](./api/class-testoptions.mdx#test-options-navigation-timeout)
- [testOptions.offline](./api/class-testoptions.mdx#test-options-offline)
- [testOptions.permissions](./api/class-testoptions.mdx#test-options-permissions)
- [testOptions.proxy](./api/class-testoptions.mdx#test-options-proxy)
- [testOptions.screenshot](./api/class-testoptions.mdx#test-options-screenshot)
- [testOptions.serviceWorkers](./api/class-testoptions.mdx#test-options-service-workers)
- [testOptions.storageState](./api/class-testoptions.mdx#test-options-storage-state)
- [testOptions.timezoneId](./api/class-testoptions.mdx#test-options-timezone-id)
- [testOptions.trace](./api/class-testoptions.mdx#test-options-trace)
- [testOptions.userAgent](./api/class-testoptions.mdx#test-options-user-agent)
- [testOptions.video](./api/class-testoptions.mdx#test-options-video)
- [testOptions.viewport](./api/class-testoptions.mdx#test-options-viewport)

## testOptions.acceptDownloads {#test-options-accept-downloads}
- type: &#60;[boolean]&#62;

Whether to automatically download all the attachments. Defaults to `true` where all the downloads are accepted.

## testOptions.actionTimeout {#test-options-action-timeout}
- type: &#60;[number]&#62;

Default timeout for each Playwright action in milliseconds, defaults to 0 (no timeout).

This is a default timeout for all Playwright actions, same as configured via [page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout).

Learn more about [various timeouts](../test-timeouts.mdx).

## testOptions.baseURL {#test-options-base-url}
- type: &#60;[string]&#62;

When using [page.goto(url[, options])](./api/class-page.mdx#page-goto), [page.route(url, handler[, options])](./api/class-page.mdx#page-route), [page.waitForURL(url[, options])](./api/class-page.mdx#page-wait-for-url), [page.waitForRequest(urlOrPredicate[, options])](./api/class-page.mdx#page-wait-for-request), or [page.waitForResponse(urlOrPredicate[, options])](./api/class-page.mdx#page-wait-for-response) it takes the base URL in consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:
* baseURL: `http://localhost:3000` and navigating to `/bar.html` results in `http://localhost:3000/bar.html`
* baseURL: `http://localhost:3000/foo/` and navigating to `./bar.html` results in `http://localhost:3000/foo/bar.html`
* baseURL: `http://localhost:3000/foo` (without trailing slash) and navigating to `./bar.html` results in `http://localhost:3000/bar.html`

## testOptions.browserName {#test-options-browser-name}
- type: &#60;"chromium"|"firefox"|"webkit"&#62;

Name of the browser that runs tests. Defaults to `'chromium'`. Most of the time you should set `browserName` in your [TestConfig]:

<Tabs
  groupId="js-flavor"
  defaultValue="ts"
  values={[
    {label: 'TypeScript', value: 'ts'},
    {label: 'JavaScript', value: 'js'}
  ]
}>
<TabItem value="ts">

```js
// playwright.config.ts
import { type PlaywrightTestConfig, devices } from '@playwright/test';

const config: PlaywrightTestConfig = {
  use: {
    browserName: 'firefox',
  },
};
export default config;
```

</TabItem>
<TabItem value="js">

```js
// playwright.config.js
// @ts-check

/** @type {import('@playwright/test').PlaywrightTestConfig} */
const config = {
  use: {
    browserName: 'firefox',
  },
};

module.exports = config;
```

</TabItem>
</Tabs>

## testOptions.bypassCSP {#test-options-bypass-csp}
- type: &#60;[boolean]&#62;

Toggles bypassing page's Content-Security-Policy.

## testOptions.channel {#test-options-channel}
- type: &#60;[string]&#62;

Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](../browsers.mdx#google-chrome--microsoft-edge).

## testOptions.colorScheme {#test-options-color-scheme}
- type: &#60;"light"|"dark"|"no-preference"&#62;

Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.

## testOptions.connectOptions {#test-options-connect-options}
- type: &#60;[void]|[Object]&#62;
  - `wsEndpoint` &#60;[string]&#62; A browser websocket endpoint to connect to.
  - `headers?` &#60;[void]|[Object]<[string], [string]>&#62; Additional HTTP headers to be sent with web socket connect request. Optional.
  - `timeout?` &#60;[number]&#62; Timeout in milliseconds for the connection to be established. Optional, defaults to no timeout.

When connect options are specified, default [fixtures.browser](./api/class-fixtures.mdx#fixtures-browser), [fixtures.context](./api/class-fixtures.mdx#fixtures-context) and [fixtures.page](./api/class-fixtures.mdx#fixtures-page) use the remote browser instead of launching a browser locally, and any launch options like [testOptions.headless](./api/class-testoptions.mdx#test-options-headless) or [testOptions.channel](./api/class-testoptions.mdx#test-options-channel) are ignored.

## testOptions.contextOptions {#test-options-context-options}
- type: &#60;[Object]&#62;

Options used to create the context, as passed to [browser.newContext([options])](./api/class-browser.mdx#browser-new-context). Specific options like [testOptions.viewport](./api/class-testoptions.mdx#test-options-viewport) take priority over this.

## testOptions.deviceScaleFactor {#test-options-device-scale-factor}
- type: &#60;[number]&#62;

Specify device scale factor (can be thought of as dpr). Defaults to `1`.

## testOptions.extraHTTPHeaders {#test-options-extra-http-headers}
- type: &#60;[Object]<[string], [string]>&#62;

An object containing additional HTTP headers to be sent with every request.

## testOptions.geolocation {#test-options-geolocation}
- type: &#60;[Object]&#62;
  - `latitude` &#60;[number]&#62; Latitude between -90 and 90.
  - `longitude` &#60;[number]&#62; Longitude between -180 and 180.
  - `accuracy?` &#60;[number]&#62; Non-negative accuracy value. Defaults to `0`.

## testOptions.hasTouch {#test-options-has-touch}
- type: &#60;[boolean]&#62;

Specifies if viewport supports touch events. Defaults to false.

## testOptions.headless {#test-options-headless}
- type: &#60;[boolean]&#62;

Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.

## testOptions.httpCredentials {#test-options-http-credentials}
- type: &#60;[Object]&#62;
  - `username` &#60;[string]&#62;
  - `password` &#60;[string]&#62;

Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).

## testOptions.ignoreHTTPSErrors {#test-options-ignore-https-errors}
- type: &#60;[boolean]&#62;

Whether to ignore HTTPS errors when sending network requests. Defaults to `false`.

## testOptions.isMobile {#test-options-is-mobile}
- type: &#60;[boolean]&#62;

Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.

## testOptions.javaScriptEnabled {#test-options-java-script-enabled}
- type: &#60;[boolean]&#62;

Whether or not to enable JavaScript in the context. Defaults to `true`.

## testOptions.launchOptions {#test-options-launch-options}
- type: &#60;[Object]&#62;

Options used to launch the browser, as passed to [browserType.launch([options])](./api/class-browsertype.mdx#browser-type-launch). Specific options [testOptions.headless](./api/class-testoptions.mdx#test-options-headless) and [testOptions.channel](./api/class-testoptions.mdx#test-options-channel) take priority over this.

## testOptions.locale {#test-options-locale}
- type: &#60;[string]&#62;

Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.

## testOptions.navigationTimeout {#test-options-navigation-timeout}
- type: &#60;[number]&#62;

Timeout for each navigation action in milliseconds. Defaults to 0 (no timeout).

This is a default navigation timeout, same as configured via [page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout).

Learn more about [various timeouts](../test-timeouts.mdx).

## testOptions.offline {#test-options-offline}
- type: &#60;[boolean]&#62;

Whether to emulate network being offline. Defaults to `false`.

## testOptions.permissions {#test-options-permissions}
- type: &#60;[Array]<[string]>&#62;

A list of permissions to grant to all pages in this context. See [browserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.

## testOptions.proxy {#test-options-proxy}
- type: &#60;[Object]&#62;
  - `server` &#60;[string]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass?` &#60;[string]&#62; Optional comma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username?` &#60;[string]&#62; Optional username to use if HTTP proxy requires authentication.
  - `password?` &#60;[string]&#62; Optional password to use if HTTP proxy requires authentication.

Network proxy settings.

## testOptions.screenshot {#test-options-screenshot}
- type: &#60;"off"|"on"|"only-on-failure"&#62;

Whether to automatically capture a screenshot after each test. Defaults to `'off'`.
* `'off'`: Do not capture screenshots.
* `'on'`: Capture screenshot after each test.
* `'only-on-failure'`: Capture screenshot after each test failure.

Learn more about [automatic screenshots](../test-configuration.mdx#automatic-screenshots).

## testOptions.serviceWorkers {#test-options-service-workers}
- type: &#60;"allow"|"block"&#62;

Whether to allow sites to register Service workers. Defaults to `'allow'`.
* `'allow'`: [Service Workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API) can be registered.
* `'block'`: Playwright will block all registration of Service Workers.

## testOptions.storageState {#test-options-storage-state}
- type: &#60;[string]|[Object]&#62;
  - `cookies` &#60;[Array]<[Object]>&#62; cookies to set for context
    - `name` &#60;[string]&#62;
    - `value` &#60;[string]&#62;
    - `domain` &#60;[string]&#62; domain and path are required
    - `path` &#60;[string]&#62; domain and path are required
    - `expires` &#60;[number]&#62; Unix time in seconds.
    - `httpOnly` &#60;[boolean]&#62;
    - `secure` &#60;[boolean]&#62;
    - `sameSite` &#60;"Strict"|"Lax"|"None"&#62; sameSite flag
  - `origins` &#60;[Array]<[Object]>&#62; localStorage to set for context
    - `origin` &#60;[string]&#62;
    - `localStorage` &#60;[Array]<[Object]>&#62;
      - `name` &#60;[string]&#62;
      - `value` &#60;[string]&#62;

Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [browserContext.storageState([options])](./api/class-browsercontext.mdx#browser-context-storage-state). Either a path to the file with saved storage, or an object with the following fields:

## testOptions.timezoneId {#test-options-timezone-id}
- type: &#60;[string]&#62;

Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.

## testOptions.trace {#test-options-trace}
- type: &#60;[Object]|"off"|"on"|"retain-on-failure"|"on-first-retry"&#62;
  - `mode` &#60;"off"|"on"|"retain-on-failure"|"on-first-retry"&#62; Trace recording mode.
  - `screenshots?` &#60;[boolean]&#62; Whether to capture screenshots during tracing. Screenshots are used to build a timeline preview. Defaults to true. Optional.
  - `snapshots?` &#60;[boolean]&#62; Whether to capture DOM snapshot on every action. Defaults to true. Optional.
  - `sources?` &#60;[boolean]&#62; Whether to include source files for trace actions. Defaults to true. Optional.

Whether to record trace for each test. Defaults to `'off'`.
* `'off'`: Do not record trace.
* `'on'`: Record trace for each test.
* `'retain-on-failure'`: Record trace for each test, but remove all traces from successful test runs.
* `'on-first-retry'`: Record trace only when retrying a test for the first time.

For more control, pass an object that specifies `mode` and trace features to enable.

Learn more about [recording trace](../test-configuration.mdx#record-test-trace).

## testOptions.userAgent {#test-options-user-agent}
- type: &#60;[string]&#62;

Specific user agent to use in this context.

## testOptions.video {#test-options-video}
- type: &#60;[Object]|"off"|"on"|"retain-on-failure"|"on-first-retry"&#62;
  - `mode` &#60;"off"|"on"|"retain-on-failure"|"on-first-retry"&#62; Video recording mode.
  - `size?` &#60;[Object]&#62; Size of the recorded video. Optional.
    - `width` &#60;[number]&#62;
    - `height` &#60;[number]&#62;

Whether to record video for each test. Defaults to `'off'`.
* `'off'`: Do not record video.
* `'on'`: Record video for each test.
* `'retain-on-failure'`: Record video for each test, but remove all videos from successful test runs.
* `'on-first-retry'`: Record video only when retrying a test for the first time.

To control video size, pass an object with `mode` and `size` properties. If video size is not specified, it will be equal to [testOptions.viewport](./api/class-testoptions.mdx#test-options-viewport) scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.

Learn more about [recording video](../test-configuration.mdx#record-video).

## testOptions.viewport {#test-options-viewport}
- type: &#60;[null]|[Object]&#62;
  - `width` &#60;[number]&#62; page width in pixels.
  - `height` &#60;[number]&#62; page height in pixels.

Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
